--- a/libs/react-query-crud/tsconfig.spec.json
+++ b/libs/react-query-crud/tsconfig.spec.json
@@ -3,11 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": [
-      "jest",
-      "node"
-    ],
-    "jsx": "react"
+    "types": ["jest", "node"]
   },
   "include": [
     "**/*.test.ts",
