--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "13.4.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.34.6",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
