--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.6",
+    "react-table": "^7.7.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
