--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2",
     "react-query": "^3.34.6",
     "react-table": "^7.7.0",
+    "react-virtual": "^2.10.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
