--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.34.6",
     "react-table": "^7.7.0",
     "react-virtual": "^2.10.0",
+    "react-window": "^1.8.6",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
