--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.6",
     "@nrwl/next": "13.4.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
