--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.62",
     "@mui/material": "^5.2.6",
     "@nrwl/next": "13.4.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.28.0",
     "next": "12.0.7",
     "query-string": "^7.0.1",
     "react": "17.0.2",
