--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "cypress": "echo 'Opening Cypress. Please wait...' && npx cypress open"
   },
   "private": true,
   "dependencies": {
